# OBDepict

./: CMakeLists.txt
src/: OBDepict  cairopainter.cpp  cairopainter.h  depict.cpp  depict.h  magickpainter.cpp  magickpainter.h  painter.h  qtpainter.cpp  qtpainter.h
src/qtdepict/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qtdepict.cpp
tools/: cairodepict.cpp  magickdepict.cpp
